[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["yousef-alramli <ysabdys1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
